--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,51 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# .gitignore by JackonYang
 
-# User-specific stuff:
-.idea
+dump.rdb
 
-# Sensitive or high-churn files:
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.xml
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
+# self defined
+db.sqlite3
+*.sqlite
+media/*
+static/*
+tests/*.html
 
-# Gradle:
-.idea/**/gradle.xml
-.idea/**/libraries
 
-# CMake
-cmake-build-debug/
+base/templates/*
 
-# Mongo Explorer plugin:
-.idea/**/mongoSettings.xml
 
-## File-based project format:
-*.iws
-*.pyc
+### Django ###
+local_settings.py
+*.log
 
-## Plugin-specific files:
 
-# IntelliJ
-out/
+### python ###
+*.py[cod]
+__pycache__/
+*.so  # C extensions
+pip-log.txt  # Installer logs
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+### Vim ###
+.ropeproject/*
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*~
 
-# Cursive Clojure plugin
-.idea/replstate.xml
+### Pycharm ###
+.idea/*
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+
+### Mac ###
+.DS_Store
+
+
+# SVN
+.svn
+
+
+!PLACEHOLDER
+
+env
+venv
+
+*.swp
